feat:Class-Work

--- a/letter.html
+++ b/letter.html
@@ -118,6 +118,6 @@ UK
     Dr Eleanor Gaye</p>
 
 <p>University of Awesome 
-   <br /> motto: "Be awesome to each other." -- The memoirs of Bill S Preston, <abbr title="Esquire">Esq</abbr> </p>
+   <br /> <em>motto:</em> "Be awesome to each other." -- The memoirs of Bill S Preston, <abbr title="Esquire">Esq</abbr> </p>
 </body>
 </html>
